update 22/10 - updating booking, completed get seat in showtime