@@ -1,11 +1,10 @@
 package sang.se.bookingmovie.app.showtime;
 
-import jakarta.validation.constraints.Null;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import sang.se.bookingmovie.app.cinema.CinemaEntity;
-import sang.se.bookingmovie.app.cinema.CinemaMapper2;
+import sang.se.bookingmovie.app.cinema.CinemaMapper;
 import sang.se.bookingmovie.app.cinema.CinemaResponse;
 import sang.se.bookingmovie.app.format.FormatEntity;
 import sang.se.bookingmovie.app.format.FormatRepository;
@@ -13,20 +12,19 @@ import sang.se.bookingmovie.app.movie.MovieEntity;
 import sang.se.bookingmovie.app.movie.MovieMapper;
 import sang.se.bookingmovie.app.movie.MovieRepository;
 import sang.se.bookingmovie.app.movie.MovieResponse;
+import sang.se.bookingmovie.app.movie_img.MovieImage;
 import sang.se.bookingmovie.app.room.RoomEntity;
 import sang.se.bookingmovie.app.room.RoomRepository;
+import sang.se.bookingmovie.app.seat_room.SeatRoomResponse;
 import sang.se.bookingmovie.exception.AllException;
+import sang.se.bookingmovie.exception.DataNotFoundException;
 import sang.se.bookingmovie.response.ListResponse;
 import sang.se.bookingmovie.utils.ApplicationUtil;
 
 import java.sql.Date;
-import java.sql.Time;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -40,18 +38,18 @@ public class ShowtimeService implements IShowtimeService {
     private final FormatRepository formatRepository;
     private final RoomRepository roomRepository;
     private final MovieRepository movieRepository;
-    private final CinemaMapper2 cinemaMapper2;
+    private final CinemaMapper cinemaMapper;
 
-    private String createShowTimeID(){
+    private String createShowTimeID() {
         long count = showtimeRepository.count() + 1;
-        return "Showtime" + applicationUtil.addZeros(count,3);
+        return "Showtime" + applicationUtil.addZeros(count, 3);
     }
 
     @Override
     public String create(List<ShowtimeRequest> showtimeRequests) {
-        for (ShowtimeRequest showtimeRequest: showtimeRequests) {
+        for (ShowtimeRequest showtimeRequest : showtimeRequests) {
             RoomEntity roomEntity = roomRepository.findById(showtimeRequest.getRoom())
-                    .orElseThrow(()->new AllException("Not Found", 404, List.of("Not found room id")));
+                    .orElseThrow(() -> new AllException("Not Found", 404, List.of("Not found room id")));
             FormatEntity format = formatRepository.findById(showtimeRequest.getFormat())
                     .orElseThrow(() -> new AllException("Not found", 404, List.of("Not found format id")));
             MovieEntity movie = movieRepository.findById(showtimeRequest.getMovie())
@@ -68,38 +66,53 @@ public class ShowtimeService implements IShowtimeService {
 
     @Override
     public ListResponse getShowtimeByCinemaAndDate(Date date, String cinemaId) {
-        List<MovieEntity> showtimeEntities = showtimeRepository.findByDateAndCinema(date, cinemaId);
-        List<MovieResponse> movieResponses = showtimeEntities.stream()
+        List<MovieEntity> movieEntities = showtimeRepository.findByDateAndCinema(date, cinemaId);
+        List<MovieResponse> movieResponses = movieEntities.stream()
+                .peek(movieEntity -> {
+                    movieEntity.setGenre(null);
+                    movieEntity.setStatus(null);
+                    movieEntity.setFormats(null);
+                    movieEntity.setComments(null);
+                    movieEntity.getShowtimes().forEach(showtimeEntity -> showtimeEntity.setRoom(null));
+                })
                 .map(movieMapper::entityToResponse)
                 .toList();
         movieResponses.forEach(movieResponse -> {
-            movieResponse.setGenre(null);
-            movieResponse.setStatus(null);
-            movieResponse.setFormats(null);
-            movieResponse.setComments(null);
+            movieResponse.setShowtimes(movieResponse.getShowtimes().stream()
+                    .sorted(Comparator.comparing(ShowtimeResponse::getStartTime))
+                    .toList());
         });
         return ListResponse.builder()
                 .total(movieResponses.size())
-                .data(Collections.singletonList(movieResponses))
+                .data(List.of(movieResponses))
                 .build();
     }
 
     @Override
-    public ListResponse getShowtimeByMovie(Date date, String movieId) {
+    public MovieResponse getShowtimeByMovie(Date date, String movieId) {
+        MovieEntity movieEntity = movieRepository.findById(movieId)
+                .orElseThrow(() -> new DataNotFoundException("Data not found", List.of("movie is not exist")));
+        getFieldToDetail(movieEntity);
+        MovieResponse movieResponse = movieMapper.entityToResponse(movieEntity);
+        movieResponse.setImages(movieResponse.getImages().stream()
+                .sorted(Comparator.comparing(MovieImage::getId))
+                .collect(Collectors.toList())
+        );
         List<CinemaEntity> cinemaEntities = showtimeRepository.findByMovieAndDate(date, movieId);
-        List<CinemaResponse> cinemaResponses = new ArrayList<>();
-        for (CinemaEntity cinemaEntity: cinemaEntities) {
-            List<ShowtimeEntity> showtimeEntities = showtimeRepository.findByCinemaId(date, cinemaEntity.getId());
-            CinemaResponse cinemaResponse = cinemaMapper2.entityToResponse(cinemaEntity);
-            cinemaResponse.setShowtime(showtimeEntities.stream()
-                    .map(showtimeMapper::entityToResponse)
-                    .collect(Collectors.toList()));
-            cinemaResponses.add(cinemaResponse);
-        }
-        return ListResponse.builder()
-                .total(cinemaResponses.size())
-                .data(new ArrayList<>(cinemaResponses))
-                .build();
+        movieResponse.setCinemas(cinemaEntities.stream().map(cinemaEntity -> {
+                    Set<ShowtimeEntity> showtimeEntities = cinemaEntity.getRooms().stream()
+                            .flatMap(roomEntity -> roomEntity.getShowtimes().stream())
+                            .collect(Collectors.toSet());
+                    CinemaResponse cinemaResponse = cinemaMapper.entityToResponse(cinemaEntity);
+                    cinemaResponse.setShowtime(showtimeEntities.stream()
+                            .peek(showtimeEntity -> showtimeEntity.setRoom(null))
+                            .map(showtimeMapper::entityToResponse)
+                            .sorted(Comparator.comparing(ShowtimeResponse::getStartTime))
+                            .collect(Collectors.toList()));
+                    return cinemaResponse;
+                })
+                .collect(Collectors.toList()));
+        return movieResponse;
     }
 
     @Override
@@ -108,7 +121,7 @@ public class ShowtimeService implements IShowtimeService {
         List<ShowtimeEntity> showtimeEntities = showtimeRepository.findAll();
         showtimeEntities.forEach(showtimeEntity -> {
             LocalDate startDate = showtimeEntity.getStartDate().toLocalDate();
-            if (startDate.equals(currentDate)){
+            if (startDate.equals(currentDate)) {
                 LocalTime startTime = showtimeEntity.getStartTime().toLocalTime();
                 if (startTime.equals(currentTime) || currentTime.isAfter(startTime)) {
                     showtimeEntity.setStatus(false);
@@ -117,5 +130,31 @@ public class ShowtimeService implements IShowtimeService {
         });
     }
 
+    @Override
+    public ShowtimeResponse getSeatInShowTime(String showtimeId) {
+        ShowtimeEntity showtimeEntity = showtimeRepository.findById(showtimeId)
+                .orElseThrow(() -> new DataNotFoundException("Data not found", List.of("Showtime is not exits")));
+        getFieldToGetSeat(showtimeEntity);
+        showtimeEntity.getRoom().getSeats().forEach(seatRoomEntity -> {
+            seatRoomEntity.setIsReserved(seatRoomEntity.getTickets().stream()
+                    .anyMatch(ticketEntity -> ticketEntity.getShowtime().getId().equals(showtimeId)));
+            seatRoomEntity.setTickets(null);
+        });
+        ShowtimeResponse showtimeResponse = showtimeMapper.entityToResponse(showtimeEntity);
+        showtimeResponse.getRoom().setSeats(showtimeResponse.getRoom().getSeats().stream()
+                .sorted(Comparator.comparing(SeatRoomResponse::getId))
+                .toList());
+        return showtimeResponse;
+    }
 
+    private void getFieldToGetSeat(ShowtimeEntity showtimeEntity) {
+        showtimeEntity.setMovie(null);
+        showtimeEntity.setFormat(null);
+        showtimeEntity.setTickets(null);
+    }
+
+    private void getFieldToDetail(MovieEntity movieEntity) {
+        movieEntity.setShowtimes(null);
+        movieEntity.getStatus().setMovies(null);
+    }
 }
